# django_template

./: .env  Dockerfile  README.md  app.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
docker/: Dockerfile  app.sh  entrypoint.sh
template/settings/: __init__.py  common.py
